Editors/Zed/TreeSitter/test/corpus/copy.txt
==================
Explicit copy
==================

func main() void {
    let first = copy source
    let second = copy player.items
}

---

(source_file
  (function_definition
    (identifier)
    (parameter_list)
    (void_type)
    (block
      (statement
        (variable_declaration
          (identifier)
          (expression
            (copy_expression
              (identifier)))))
      (statement
        (variable_declaration
          (identifier)
          (expression
            (copy_expression
              (member_expression
                (identifier)
                (identifier)))))))))
